# Odometry-Mapping-and-Localization-for-Mobile-Robots

./: ReadMe.md
localization_and_navigation/: CMakeLists.txt  ReadMe.md  package.xml
localization_and_navigation/config/: mapper.yaml  nav2_params_stage_mppi.yaml
localization_and_navigation/csv/: goals.csv
localization_and_navigation/launch/: localization.launch.py  mapping.launch.py  pass_1_goal.launch.py  pass_goals.launch.py
localization_and_navigation/map/: my_map.yaml
localization_and_navigation/rviz/: configuration.rviz  stage_nav2_showcase.rviz
localization_and_navigation/src/: convert_scan.cpp  pass_1_action.cpp  pass_poses.cpp  stageros.cpp
localization_and_navigation/world/: my_map.pgm  my_map.world  robot.inc
odometry_from_bag/: CMakeLists.txt  ReadMe.md  package.xml
odometry_from_bag/launch/: launch_rviz2.launch.py
odometry_from_bag/rviz2/: configuration.rviz
odometry_from_bag/src/: odometer.cpp  tf_error.cpp
